モバイル打楽器の実装を修正, テスト追加